--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Mini-Project 2"
-author: "Your Name Here"
+author: "Hening Zheng, Jaime Pettit"
 date: "October 31, 2017"
 output: html_document
 ---
