--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -15,4 +15,14 @@ load("house_elections.rda")
 load("candidates.rda")
 load("committees.rda")
 load("contributions.rda")
+library(tidyverse)
 ```
+
+```{r, message=FALSE}
+ct <- house_elections %>%
+  filter(state == "CT") %>%
+  select(-c(fec_id, incumbent, state))
+  
+ct
+```
+  
