--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -24,41 +24,21 @@ theme_swing <- function () {
       aspect.ratio = 0.618,
       text = element_text(family = "Avenir"),
       axis.title.x = element_text(size = 20, color = "black",
-                                  margin = margin(9,0,0,0,"pt")),
+                                  margin = margin(8,0,0,0,"pt")),
       axis.text.y = element_text(size = 20, color = "black",
                                   margin = margin(0,6,0,0,"pt")),
       plot.title = element_text(face = 2, 
                                 size = 30,
-                                margin = margin(0,0,12,0,"pt")),
+                                margin = margin(0,0,-25,0,"pt")),
       axis.ticks = element_blank(),
       legend.title = element_blank(),
       legend.text = element_text(size = 15, color = "black"),
+      legend.position = "top",
       panel.grid.major = element_line(color = NA),
       panel.grid.minor = element_line(color = NA),
       panel.background = element_blank()
   )
 }
-
-ct <- house_elections %>%
-  filter(state == "CT") %>%
-  select(-fec_id, -incumbent, -state) %>%
-  group_by(party) %>%
-  arrange(district)
-  
-ct
-
-ct_party <- ct %>%
-  summarize(N = n(),
-            dist1 = sum(ifelse(district == '01', 1, 0)),
-            dist2 = sum(ifelse(district == '02', 1, 0)),
-            dist3 = sum(ifelse(district == '03', 1, 0)),
-            dist4 = sum(ifelse(district == '04', 1, 0)),
-            dist5 = sum(ifelse(district == '05', 1, 0)),
-            primary = sum(primary_votes),
-            general = sum(general_votes)) %>%
-  arrange(desc(general))
-
-ct_party
 
 party_by_state <- function(state_arg) {
   house_elections %>%
@@ -69,39 +49,6 @@ party_by_state <- function(state_arg) {
             primary = sum(primary_votes),
             general = sum(general_votes)) %>%
   arrange(desc(general))
-}
-
-winner_party <- function(state_arg) {
-  partydata <- party_by_state(state_arg) 
-  general_winner <- partydata[1,]
-  partydata %>% summarize(state = state_arg,
-                          party = general_winner$party,
-                          ratio = general_winner$general/sum(general))
-}
-
-party <- function(state_arg, party_arg) {
-  partydata <- party_by_state(state_arg) 
-  votes <- partydata %>% subset(party == party_arg)
-  partydata %>% summarize(state = state_arg,
-                          ratio = votes$general[1]/sum(general))
-}
-
-d_party <- function(state_arg) {
-  party(state_arg, "D") 
-}
-
-comparison <- function(state_arg) {
-  partydata <- party_by_state(state_arg) 
-  winner_party <- partydata[1,]
-  dem <- partydata %>% subset(party == "D")
-  rep <- partydata %>% subset(party == "R")
-  partydata %>% summarize(state = state_arg,
-                          total_votes = sum(general),
-                          winner = winner_party$party[1],
-                          dem_votes = dem$general[1],
-                          dem_ratio = dem_votes/total_votes,
-                          rep_votes = rep$general[1],
-                          rep_ratio = rep_votes/total_votes)
 }
 
 swing <- function(state_arg) {
@@ -130,7 +77,7 @@ swing_states <- top_10_swing %>%
   select(state) %>%
   unique()
 
-swing_dist <- function(state_arg) {
+swing_district <- function(state_arg) {
   house_elections %>%
     filter(state == state_arg) %>%
     group_by(district) %>% 
@@ -142,11 +89,15 @@ swing_dist <- function(state_arg) {
     gather("party", "percentage", 4:6) %>%
     mutate(party = factor(party, levels = c("D", "R", "others"), 
                           labels = c("Democrat", "Republican", "others"))) %>%
-    arrange(district) %>% 
+    arrange(district)
+}
+
+swing_district_graph <- function(state_arg) {
+  swing_district(state_arg) %>%
     ggplot(aes(x = district, y = percentage, fill = party)) +
-    geom_bar(stat = "identity", position = position_stack(reverse = TRUE)) + 
-    scale_fill_manual("legend", values = c("#5DA2F5", "#F77471", "#1EB742")) +
+    geom_bar(stat = "identity", position = position_stack(reverse = TRUE)) +
     ggtitle(label = state_arg) +
+    scale_fill_manual("legend", values = c("#5DA2F5", "#F77471", "#1EB742")) +
     scale_x_discrete(name = "District",
                      labels = NULL,
                      expand=c(0, 0)) +
@@ -157,7 +108,12 @@ swing_dist <- function(state_arg) {
     theme_swing()
 }
 
-lapply(swing_states$state, swing_dist)
+plots <- lapply(swing_states$state, swing_district_graph)
 
+i <- 0
+while (i < length(plots)) {
+  i <- i + 1
+  print(plots[[i]])  
+}
 ```
   
