--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -118,65 +118,37 @@ while (i < length(plots)) {
   print(plots[[i]])  
 }
 
-tie_contribution <- function(state_arg) {
-  tie <- swing_district(state_arg) %>%
-    slice(which.min(abs(D - R)))
+district_contribution <- function(state_arg, data_arg) {
+  if (data_arg == "tie") {
+    data <- swing_district(state_arg) %>%
+      slice(which.min(abs(D - R)))
+  } else if (data_arg == "dem_adv") {
+    data <- swing_district(state_arg) %>%
+      slice(which.max(D))
+  } else if (data_arg == "rep_adv"){
+    data <- swing_district(state_arg) %>%
+      slice(which.max(R))
+  } 
   
-  tie <- house_elections %>%
-    filter(state == state_arg, district %in% tie$district, general_votes != 0) %>%
+  data <- house_elections %>%
+    filter(state == state_arg, district %in% data$district, general_votes != 0) %>%
     select(fec_id, state, district, general_votes, party, ge_winner)
   
-  colnames(tie)[1] <- "cand_id"
+  colnames(data)[1] <- "cand_id"
   
   contributions %>%
-    filter(cand_id %in% tie$cand_id) %>%
+    filter(cand_id %in% data$cand_id) %>%
     select(cand_id, transaction_amt) %>%
     group_by(cand_id) %>%
     summarize(contribution = sum(transaction_amt)) %>%
-    inner_join(tie, by = "cand_id")
+    inner_join(data, by = "cand_id")
 }
 
-dem_adv_contribution <- function(state_arg) {
-  dem_adv <- swing_district(state_arg) %>%
-    slice(which.max(D))
+contribution_graph <- function(data_arg) {
+  data <- lapply(swing_states, district_contribution, data_arg) %>%
+    bind_rows()
   
-  dem_adv <- house_elections %>%
-    filter(state == state_arg, district %in% dem_adv$district, general_votes != 0) %>%
-    select(fec_id, state, district, general_votes, party, ge_winner)
-  
-  colnames(dem_adv)[1] <- "cand_id"
-  
-  contributions %>%
-    filter(cand_id %in% dem_adv$cand_id) %>%
-    select(cand_id, transaction_amt) %>%
-    group_by(cand_id) %>%
-    summarize(contribution = sum(transaction_amt)) %>%
-    inner_join(dem_adv, by = "cand_id")
-}
-
-rep_adv_contribution <- function(state_arg) {
-  rep_adv <- swing_district(state_arg) %>%
-    slice(which.max(R))
-  
-  rep_adv <- house_elections %>%
-    filter(state == state_arg, district %in% rep_adv$district, general_votes != 0) %>%
-    select(fec_id, state, district, general_votes, party, ge_winner)
-  
-  colnames(rep_adv)[1] <- "cand_id"
-  
-  contributions %>%
-    filter(cand_id %in% rep_adv$cand_id) %>%
-    select(cand_id, transaction_amt) %>%
-    group_by(cand_id) %>%
-    summarize(contribution = sum(transaction_amt)) %>%
-    inner_join(rep_adv, by = "cand_id")
-}
-
-contribution_graph <- function(fun_arg) {
-  contribution <- lapply(swing_states, fun_arg) %>%
-    bind_rows 
-  
-  parties <- contribution$party
+  parties <- data$party
   i <- 0
   while (i < length(parties)) {
     i <- i + 1
@@ -185,7 +157,7 @@ contribution_graph <- function(fun_arg) {
     }
   }
   
-  contribution %>% mutate(party = parties) %>%
+  data %>% mutate(party = parties) %>%
     mutate(party = factor(party, levels = c("D", "R", "others"), 
                           labels = c("Democrat", "Republican", "others"))) %>%
     ggplot(aes(x = state, y = contribution, fill = party)) +
@@ -206,11 +178,11 @@ contribution_graph <- function(fun_arg) {
           legend.position = "bottom")
 }
 
-contribution_graph(tie_contribution) +
+contribution_graph("tie") +
   ggtitle(label = "Contribution to Candidates of \nthe Closest-Tied District by State")
-contribution_graph(dem_adv_contribution) +
+contribution_graph("dem_adv") +
   ggtitle(label = "Contribution to Candidates of the Most \nDemocrat-Advantaged District by State")
-contribution_graph(rep_adv_contribution) +
+contribution_graph("rep_adv") +
   ggtitle(label = "Contribution to Candidates of the Most \nRepublican-Advantaged District by State")
 ```
   
