--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -163,7 +163,7 @@ contribution_graph <- function(data_arg, type_arg) {
     }
   }
   
-  data %>% mutate(party = parties,
+  plot <- data %>% mutate(party = parties,
                   party = factor(party, levels = c("D", "R", "others"), 
                           labels = c("Democrat", "Republican", "others"))) %>%
     ggplot(aes(x = state, y = contribution, fill = party)) +
@@ -182,52 +182,75 @@ contribution_graph <- function(data_arg, type_arg) {
                                     margin = margin(0,0,5,0,"pt"),
                                     hjust = 0.5),
           legend.position = "bottom")
+  
+  if (data_arg == "tie") {
+    if (is.null(type_arg)) {
+      plot +
+        ggtitle(label = "Contribution Related to Candidates of \nthe Most Closely Tied District \nin Each Swing State") +
+        scale_y_continuous(breaks = seq(0, 12500000, 2500000),
+                           labels = seq(0, 12.5, 2.5))
+    } else if (type_arg == "24E") {
+      plot +
+        ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Closely Tied District \nin Each Swing State") 
+      scale_y_continuous(name = "Total Contribution (100k)",
+                         breaks = seq(0, 2400000, 400000),
+                         labels = seq(0, 24, 4))
+    } else if (type_arg == "24A") {
+      plot +
+        ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Closely Tied District \nin Each Swing State")
+    } 
+  } else if (data_arg == "dem_adv") {
+    if (is.null(type_arg)) {
+      plot +
+        ggtitle(label = "Contribution Related to Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State")
+    } else if (type_arg == "24E") {
+      plot +
+        ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State") +
+        scale_y_continuous(name = "Total Contribution (100k)",
+                           breaks = seq(0, 1000000, 100000),
+                           labels = seq(0, 10, 1))
+    } else if (type_arg == "24A") {
+      plot +
+        ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State")
+    } 
+  } else if (data_arg == "rep_adv") {
+    if (is.null(type_arg)) {
+      plot +
+        ggtitle(label = "Contribution Related to Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State")
+    } else if (type_arg == "24E") {
+      plot +
+        ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State") +
+        scale_y_continuous(name = "Total Contribution (100k)",
+                           breaks = seq(0, 1000000, 200000),
+                           labels = seq(0, 10, 2))
+    } else if (type_arg == "24A") {
+      plot +
+        ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State")
+    } 
+  }
 }
 
 districts <- c("tie", "dem_adv", "rep_adv")
 
 contribution_plots <- lapply(districts, contribution_graph, NULL)
-
-contribution_plots[[1]] +
-  ggtitle(label = "Contribution Related to Candidates of \nthe Most Closely Tied District \nin Each Swing State") +
-  scale_y_continuous(breaks = seq(0, 12500000, 2500000),
-                     labels = seq(0, 12.5, 2.5))
-
-contribution_plots[[2]] +
-  ggtitle(label = "Contribution Related to Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State")
-
-contribution_plots[[3]] +
-  ggtitle(label = "Contribution Related to Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State")
-
 advocation_plots <- lapply(districts, contribution_graph, "24E")
 opposition_plots <- lapply(districts, contribution_graph, "24A")
 
-advocation_plots[[1]] +
-  ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Closely Tied District \nin Each Swing State") +
-  scale_y_continuous(name = "Total Contribution (100k)",
-                     breaks = seq(0, 2400000, 400000),
-                     labels = seq(0, 24, 4))
+i <- 0
+while (i < length(contribution_plots)) {
+  i <- i + 1
+  print(contribution_plots[[i]])  
+  cat("\n\n")
+}
 
-opposition_plots[[1]] +
-  ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Closely Tied District \nin Each Swing State")
-
-advocation_plots[[2]] +
-  ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State") +
-  scale_y_continuous(name = "Total Contribution (100k)",
-                     breaks = seq(0, 1000000, 100000),
-                     labels = seq(0, 10, 1))
-
-opposition_plots[[2]] +
-  ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State")
-
-advocation_plots[[3]] +
-  ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State") +
-  scale_y_continuous(name = "Total Contribution (100k)",
-                     breaks = seq(0, 1000000, 200000),
-                     labels = seq(0, 10, 2))
-
-opposition_plots[[3]] +
-  ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State")
+i <- 0
+while (i < length(advocation_plots)) {
+  i <- i + 1
+  print(advocation_plots[[i]])  
+  cat("\n\n")
+  print(opposition_plots[[i]])  
+  cat("\n\n")
+}
 
 ```
   
