--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -151,20 +151,10 @@ contribution_by_district <- function(state_arg, data_arg, type_arg) {
 }
 
 contribution_graph <- function(data_arg, type_arg) {
-  data <- lapply(swing_states, contribution_by_district, data_arg, type_arg) %>%
-    bind_rows()
-  
-  parties <- data$party
-  i <- 0
-  while (i < length(parties)) {
-    i <- i + 1
-    if (parties[[i]] != "D" && parties[[i]] != "R") {
-      parties[[i]] = "others"
-    }
-  }
-  
-  plot <- data %>% mutate(party = parties,
-                  party = factor(party, levels = c("D", "R", "others"), 
+  plot <- lapply(swing_states, contribution_by_district, data_arg, type_arg) %>%
+    bind_rows() %>% 
+    mutate(party = replace(party, which(party!="D",party!="R"), "others"),
+           party = factor(party, levels = c("D", "R", "others"),
                           labels = c("Democrat", "Republican", "others"))) %>%
     ggplot(aes(x = state, y = contribution, fill = party)) +
     geom_bar(stat = "identity", position = position_stack(reverse = TRUE)) +
@@ -179,55 +169,50 @@ contribution_graph <- function(data_arg, type_arg) {
     theme_swing() +
     theme(plot.title = element_text(face = 2, 
                                     size = 20,
-                                    margin = margin(0,0,5,0,"pt"),
+                                    margin = margin(10,0,5,0,"pt"),
                                     hjust = 0.5),
           legend.position = "bottom")
   
   if (data_arg == "tie") {
+    title_district <- "Candidates of \nthe Most Closely Tied District \nin Each Swing State"
     if (is.null(type_arg)) {
-      plot +
-        ggtitle(label = "Contribution Related to Candidates of \nthe Most Closely Tied District \nin Each Swing State") +
-        scale_y_continuous(breaks = seq(0, 12500000, 2500000),
+      title_type <- "Contribution Related to "
+      plot + scale_y_continuous(breaks = seq(0, 12500000, 2500000),
                            labels = seq(0, 12.5, 2.5))
     } else if (type_arg == "24E") {
-      plot +
-        ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Closely Tied District \nin Each Swing State") 
-      scale_y_continuous(name = "Total Contribution (100k)",
+      title_type <- "Individual Contribution Advocating "
+      plot + scale_y_continuous(name = "Total Contribution (100k)",
                          breaks = seq(0, 2400000, 400000),
                          labels = seq(0, 24, 4))
     } else if (type_arg == "24A") {
-      plot +
-        ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Closely Tied District \nin Each Swing State")
+      title_type <- "Individual Contribution Opposing "
     } 
   } else if (data_arg == "dem_adv") {
+    title_district <- "Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State"
     if (is.null(type_arg)) {
-      plot +
-        ggtitle(label = "Contribution Related to Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State")
+      title_type <- "Contribution Related to "
     } else if (type_arg == "24E") {
-      plot +
-        ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State") +
-        scale_y_continuous(name = "Total Contribution (100k)",
+      title_type <- "Individual Contribution Advocating "
+      plot + scale_y_continuous(name = "Total Contribution (100k)",
                            breaks = seq(0, 1000000, 100000),
                            labels = seq(0, 10, 1))
     } else if (type_arg == "24A") {
-      plot +
-        ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State")
+      title_type <- "Individual Contribution Opposing "
     } 
   } else if (data_arg == "rep_adv") {
+    title_district <- "Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State"
     if (is.null(type_arg)) {
-      plot +
-        ggtitle(label = "Contribution Related to Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State")
+      title_type <- "Contribution Related to "
     } else if (type_arg == "24E") {
-      plot +
-        ggtitle(label = "Individual Contribution Advocating Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State") +
-        scale_y_continuous(name = "Total Contribution (100k)",
+      title_type <- "Individual Contribution Advocating "
+      plot + scale_y_continuous(name = "Total Contribution (100k)",
                            breaks = seq(0, 1000000, 200000),
                            labels = seq(0, 10, 2))
     } else if (type_arg == "24A") {
-      plot +
-        ggtitle(label = "Individual Contribution Opposing Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State")
+      title_type <- "Individual Contribution Opposing "
     } 
   }
+  plot + ggtitle(label = paste(title_type, title_district))
 }
 
 districts <- c("tie", "dem_adv", "rep_adv")
@@ -240,16 +225,13 @@ i <- 0
 while (i < length(contribution_plots)) {
   i <- i + 1
   print(contribution_plots[[i]])  
-  cat("\n\n")
 }
 
 i <- 0
 while (i < length(advocation_plots)) {
   i <- i + 1
   print(advocation_plots[[i]])  
-  cat("\n\n")
   print(opposition_plots[[i]])  
-  cat("\n\n")
 }
 
 ```
