--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -6,9 +6,7 @@ output: html_document
 ---
 
 
-## Swing States General Votes by District
-
-This project is so interesting and relevant to my life!
+## Monetary Influence in Swing States
 
 ```{r, include=FALSE}
 load("house_elections.rda")
@@ -19,6 +17,7 @@ library(tidyverse)
 ```
 
 ```{r, message=FALSE}
+# Theme used for graphs
 theme_swing <- function () { 
     theme(
       aspect.ratio = 0.618,
@@ -44,6 +43,7 @@ theme_swing <- function () {
   )
 }
 
+# Function to get results of primary and general votes for each party in a certain state
 party_by_state <- function(state_arg) {
   house_elections %>%
   filter(state == state_arg) %>%
@@ -54,6 +54,7 @@ party_by_state <- function(state_arg) {
   arrange(desc(general))
 }
 
+# Function to determine the swaying of a certain state, including get the total general votes, general votes winner, general votes for Democrat and Republican respectively and the ratio of which
 swing <- function(state_arg) {
   partydata <- party_by_state(state_arg) 
   winner_party <- partydata[1,]
@@ -67,18 +68,22 @@ swing <- function(state_arg) {
                           dem_vs_rep = dem_votes/rep_votes)
 }
 
+# All the states in house elections
 states <- house_elections %>% 
   select(state) %>%
   unique()
 states <- states$state
 
-top_10_swing <- lapply(states, swing) %>%
+# Data for states that have the closest general votes for Democrat and Republican (the absolute value of general votes Democrat got over general votes Republican got minus one is smaller than 0.1)
+top_swing <- lapply(states, swing) %>%
   bind_rows() %>%
   filter(abs(dem_vs_rep-1) < 0.1) %>%
   arrange(abs(dem_vs_rep-1))
 
-swing_states <- top_10_swing$state
+# Top swing states
+swing_states <- top_swing$state
 
+# Function to get the general votes distribution by district in a certain state
 swing_district <- function(state_arg) {
   house_elections %>%
     filter(state == state_arg) %>%
@@ -90,6 +95,7 @@ swing_district <- function(state_arg) {
               others = 100-D-R)
 }
 
+# Function to draw a graph of the general votes distribution by district for a certain state
 swing_district_graph <- function(state_arg) {
   swing_district(state_arg)  %>%
     gather("party", "percentage", 4:6) %>%
@@ -110,14 +116,17 @@ swing_district_graph <- function(state_arg) {
     theme_swing()
 }
 
+# Plots of the general votes distribution by district for the top swing states
 swing_district_plots <- lapply(swing_states, swing_district_graph)
 
+# Print out the plots
 i <- 0
 while (i < length(swing_district_plots)) {
   i <- i + 1
   print(swing_district_plots[[i]])  
 }
 
+# Function to get a certain type of contribution to candidates of general votes in a certain district (most closely tie/most Democrat-advantaged district/most Republican-advantaged) in a certain state
 contribution_by_district <- function(state_arg, data_arg, type_arg) {
   if (data_arg == "tie") {
     data <- swing_district(state_arg) %>%
@@ -150,6 +159,7 @@ contribution_by_district <- function(state_arg, data_arg, type_arg) {
     inner_join(data, by = "cand_id")
 }
 
+# Function to draw graphs of a certain type of contribution to candidates of general votes in a certain district (most closely tie/most Democrat-advantaged district/most Republican-advantaged) in top swing states
 contribution_graph <- function(data_arg, type_arg) {
   plot <- lapply(swing_states, contribution_by_district, data_arg, type_arg) %>%
     bind_rows() %>% 
@@ -176,51 +186,54 @@ contribution_graph <- function(data_arg, type_arg) {
   if (data_arg == "tie") {
     title_district <- "Candidates of \nthe Most Closely Tied District \nin Each Swing State"
     if (is.null(type_arg)) {
-      title_type <- "Contribution Related to "
+      title_type <- "Contribution Related to"
       plot + scale_y_continuous(breaks = seq(0, 12500000, 2500000),
                            labels = seq(0, 12.5, 2.5))
     } else if (type_arg == "24E") {
-      title_type <- "Individual Contribution Advocating "
+      title_type <- "Individual Contribution Advocating"
       plot + scale_y_continuous(name = "Total Contribution (100k)",
                          breaks = seq(0, 2400000, 400000),
                          labels = seq(0, 24, 4))
     } else if (type_arg == "24A") {
-      title_type <- "Individual Contribution Opposing "
+      title_type <- "Individual Contribution Opposing"
     } 
   } else if (data_arg == "dem_adv") {
     title_district <- "Candidates of \nthe Most Democrat-Advantaged District \nin Each Swing State"
     if (is.null(type_arg)) {
-      title_type <- "Contribution Related to "
+      title_type <- "Contribution Related to"
     } else if (type_arg == "24E") {
-      title_type <- "Individual Contribution Advocating "
+      title_type <- "Individual Contribution Advocating"
       plot + scale_y_continuous(name = "Total Contribution (100k)",
                            breaks = seq(0, 1000000, 100000),
                            labels = seq(0, 10, 1))
     } else if (type_arg == "24A") {
-      title_type <- "Individual Contribution Opposing "
+      title_type <- "Individual Contribution Opposing"
     } 
   } else if (data_arg == "rep_adv") {
     title_district <- "Candidates of \nthe Most Republican-Advantaged District \nin Each Swing State"
     if (is.null(type_arg)) {
-      title_type <- "Contribution Related to "
+      title_type <- "Contribution Related to"
     } else if (type_arg == "24E") {
-      title_type <- "Individual Contribution Advocating "
+      title_type <- "Individual Contribution Advocating"
       plot + scale_y_continuous(name = "Total Contribution (100k)",
                            breaks = seq(0, 1000000, 200000),
                            labels = seq(0, 10, 2))
     } else if (type_arg == "24A") {
-      title_type <- "Individual Contribution Opposing "
+      title_type <- "Individual Contribution Opposing"
     } 
   }
   plot + ggtitle(label = paste(title_type, title_district))
 }
 
+# Tags for getting data of the most closely tie/most Democrat-advantaged district/most Republican-advantaged district
 districts <- c("tie", "dem_adv", "rep_adv")
 
+# Plots of total relevant contribution, individual contribution advocating/opposing candidates of the most closely tie/most Democrat-advantaged district/most Republican-advantaged district in top swing states
 contribution_plots <- lapply(districts, contribution_graph, NULL)
 advocation_plots <- lapply(districts, contribution_graph, "24E")
 opposition_plots <- lapply(districts, contribution_graph, "24A")
 
+# Print out the plots
 i <- 0
 while (i < length(contribution_plots)) {
   i <- i + 1
@@ -235,4 +248,9 @@ while (i < length(advocation_plots)) {
 }
 
 ```
+
+The data being exhibited shows the voter polls by party in the various districts of the ten key swing states — or in simpler terms the total of the public's general votes for Democrats and Republicans — as well as the campaign contributions of the different parties in said states. To show the difference between parties, Republicans were represented in red, Democrats in blue, and other parties in green. It was unclear to us whether or not all districts in a state were swing districts, and if the general polling per district between Democrats and Republicans were tied. Ten separate graphs for the ten different swing states were created to answer this very question. According to our mapped results, the closest state in terms of voter polls was New Hampshire, with its only two districts polling nearly equally, while states with more districts varied on average on which party was being voted for.
+
+In addition to the inquiries concerning voter preference, another question that was raised during this project was how contribution was related to the swaying of an election in swing states, and how certain parties donating may have an effect on swaying elections. We first looked at the total contribution of advocating or opposing candidates most closely affiliated with a certain party's dominant control over the district in each swing state. After this, we looked at the individual donations and campaigning for candidates of each party. It is noteworthy that first of all, in general, a much larger amount of money was funneled into the most closely tied districts rather than the most Democrat-advantaged/most Republican-advantaged districts. Secondly, there is generally more individual contribution funneled into opposing, rather than advocating, a candidate. In addition, what we found most interesting was the amount of money that was being funneled into campaigns in the state of New Hampshire. New Hampshire has only two districts, which can result in a close call when it comes to election time, so politicians find it imperative to sway voters as much as possible. In all our graphs, the results indicated that there was always money being funneled in to campaigning in New Hampshire in every field, as opposed to some states where money was not funneled in certain areas, and that usually donations are in the millions. What we can learn from this data is that the millions of dollars donated by various sponsors of candidates can be incredibly influential in swaying an election into one's favor, especially in swing states. Wrangling and presenting the data can really showcase the magnitude of this problem and start a conversation about the state of politics in this country.
+
   
